<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/nav"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:scaleType="fitXY"
            android:src="@drawable/nav_bar" />

        <RelativeLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="12dp">

            <RelativeLayout
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">

                <ImageButton
                    android:id="@+id/back_button"
                    style="@style/iconStyle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/back" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@id/back_button"
                    android:text="Romantic Comedy"
                    android:layout_centerVertical="true"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <ImageButton
                    android:id="@+id/search"
                    style="@style/iconStyle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/search" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/customSearchLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal"
                    android:paddingHorizontal="5dp">

                    <!-- EditText for search text -->
                    <AutoCompleteTextView
                        android:id="@+id/searchEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:hint="Searches atleast have 3 chars"
                        android:completionThreshold="1"
                        android:inputType="text"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:autoSizeMinTextSize="8sp"
                        android:autoSizeMaxTextSize="16sp" />

                    <!-- Cross button -->
                    <ImageView
                        android:id="@+id/crossButton"
                        style="@style/iconStyle"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:paddingVertical="5dp"
                        android:background="@null"
                        android:visibility="gone"
                        android:src="@drawable/search_cancel" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/white" />

            </LinearLayout>
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appbar"
            android:layout_marginHorizontal="5dp"
            app:spanCount="3"
            tools:listitem="@layout/movie_item" />

    </RelativeLayout>
</layout>